<resources>
    <string name="app_name">AplBankSampah</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="confirmed">Selesai</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu1">Home</string>
    <string name="menu2">Pickup</string>
    <string name="menu3">History</string>
    <string name="menu4">Layanan</string>
    <string name="menu5">Akun</string>
    <string name="menu6">Logout</string>
</resources>
