<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu1" />
        <item
            android:id="@+id/nav_pickup"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu2" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu3" />
        <item
            android:id="@+id/nav_layanan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu4" />
        <item
            android:id="@+id/nav_akun"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu5" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu6" />
    </group>
</menu>